[project]
name = "openclaw-docker-proxy"
version = "1.0.7"
description = "Minimal Docker-API proxy for OpenClaw diagnostics"
requires-python = ">=3.13"
dependencies = [
    "starlette==0.46.2",
    "uvicorn==0.34.2",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
